modified Data description section

--- a/DeaCode.ipynb
+++ b/DeaCode.ipynb
@@ -36,73 +36,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "indonesian-martin",
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "      pid  w5_hhid w5_questionnaire                             w5_match  \\\n",
-       "0  640576   500000            Adult                    Matched Last only   \n",
-       "1  636991   500000            Proxy  Unmatched: No School Data collected   \n",
-       "2  405734   500001            Adult                            Unmatched   \n",
-       "3  630858   500002            Child               No Schooling Completed   \n",
-       "4  731651   500002            Adult                    Matched Last only   \n",
-       "\n",
-       "  w5_edlstm_schcd w5_edlstm_prov w5_edlstm_quin w5_edlstm_phase  \\\n",
-       "0          102905   Eastern Cape              3       Secondary   \n",
-       "1             NaN            NaN            NaN             NaN   \n",
-       "2             NaN            NaN     Don't know             NaN   \n",
-       "3             NaN            NaN            NaN             NaN   \n",
-       "4          105027        Limpopo              1       Secondary   \n",
-       "\n",
-       "  w5_edlstm_nofee            w5_edlstm_exdept  ... w5_ed17m_schcd  \\\n",
-       "0      Don't Know                         HOR  ...            NaN   \n",
-       "1             NaN                         NaN  ...            NaN   \n",
-       "2             NaN                         NaN  ...            NaN   \n",
-       "3             NaN                         NaN  ...            NaN   \n",
-       "4              No  Self-governing territories  ...            NaN   \n",
-       "\n",
-       "  w5_ed17m_prov w5_ed17m_quin w5_ed17m_phase w5_ed17m_nofee w5_ed17m_exdept  \\\n",
-       "0           NaN           NaN            NaN            NaN             NaN   \n",
-       "1           NaN           NaN            NaN            NaN             NaN   \n",
-       "2           NaN           NaN            NaN            NaN             NaN   \n",
-       "3           NaN           NaN            NaN            NaN             NaN   \n",
-       "4           NaN           NaN            NaN            NaN             NaN   \n",
-       "\n",
-       "  w5_poldistr_id_15 w5_poldistr_distance_cat_15 w5_polnear_id_15  \\\n",
-       "0          900782.0                  >1 & <=5km         900782.0   \n",
-       "1          900782.0                  >1 & <=5km         900782.0   \n",
-       "2          900587.0                       <=1km         900587.0   \n",
-       "3          900093.0               >10 & <= 20km         901066.0   \n",
-       "4          900093.0               >10 & <= 20km         901066.0   \n",
-       "\n",
-       "  w5_polnear_distance_cat_15  \n",
-       "0                 >1 & <=5km  \n",
-       "1                 >1 & <=5km  \n",
-       "2                      <=1km  \n",
-       "3              >10 & <= 20km  \n",
-       "4              >10 & <= 20km  \n",
-       "\n",
-       "[5 rows x 38 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pid</th>\n      <th>w5_hhid</th>\n      <th>w5_questionnaire</th>\n      <th>w5_match</th>\n      <th>w5_edlstm_schcd</th>\n      <th>w5_edlstm_prov</th>\n      <th>w5_edlstm_quin</th>\n      <th>w5_edlstm_phase</th>\n      <th>w5_edlstm_nofee</th>\n      <th>w5_edlstm_exdept</th>\n      <th>...</th>\n      <th>w5_ed17m_schcd</th>\n      <th>w5_ed17m_prov</th>\n      <th>w5_ed17m_quin</th>\n      <th>w5_ed17m_phase</th>\n      <th>w5_ed17m_nofee</th>\n      <th>w5_ed17m_exdept</th>\n      <th>w5_poldistr_id_15</th>\n      <th>w5_poldistr_distance_cat_15</th>\n      <th>w5_polnear_id_15</th>\n      <th>w5_polnear_distance_cat_15</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>640576</td>\n      <td>500000</td>\n      <td>Adult</td>\n      <td>Matched Last only</td>\n      <td>102905</td>\n      <td>Eastern Cape</td>\n      <td>3</td>\n      <td>Secondary</td>\n      <td>Don't Know</td>\n      <td>HOR</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>900782.0</td>\n      <td>&gt;1 &amp; &lt;=5km</td>\n      <td>900782.0</td>\n      <td>&gt;1 &amp; &lt;=5km</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>636991</td>\n      <td>500000</td>\n      <td>Proxy</td>\n      <td>Unmatched: No School Data collected</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>900782.0</td>\n      <td>&gt;1 &amp; &lt;=5km</td>\n      <td>900782.0</td>\n      <td>&gt;1 &amp; &lt;=5km</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>405734</td>\n      <td>500001</td>\n      <td>Adult</td>\n      <td>Unmatched</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Don't know</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>900587.0</td>\n      <td>&lt;=1km</td>\n      <td>900587.0</td>\n      <td>&lt;=1km</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>630858</td>\n      <td>500002</td>\n      <td>Child</td>\n      <td>No Schooling Completed</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>900093.0</td>\n      <td>&gt;10 &amp; &lt;= 20km</td>\n      <td>901066.0</td>\n      <td>&gt;10 &amp; &lt;= 20km</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>731651</td>\n      <td>500002</td>\n      <td>Adult</td>\n      <td>Matched Last only</td>\n      <td>105027</td>\n      <td>Limpopo</td>\n      <td>1</td>\n      <td>Secondary</td>\n      <td>No</td>\n      <td>Self-governing territories</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>900093.0</td>\n      <td>&gt;10 &amp; &lt;= 20km</td>\n      <td>901066.0</td>\n      <td>&gt;10 &amp; &lt;= 20km</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 38 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 3
-    }
-   ],
-   "source": [
-    "df = pd.read_stata('DataBase.dta')\n",
-    "#df['w5_a_dob_d']\n",
-    "df.columns\n",
-    "df.head()\n"
-   ]
-  },
-  {
    "source": [
     "# 0. ...A Catchy Title... (e.g. \"Are people getting poorer?\")"
    ],
@@ -133,9 +66,56 @@
   },
   {
    "source": [
-    "## Data Wrangling\n",
+    "## Data Description\n",
     "The data was originaly sourced from the [UCT NIDS databse] (http://www.nids.uct.ac.za/nids-data/program-library/derived-files) \n",
-    "The date downloaded will be gotten from (Rutendo,pls ask)"
+    "The date downloaded will be gotten from (Rutendo,pls ask). \n",
+    "The contents can be seen as below."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "indonesian-martin",
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['pid', 'w5_hhid', 'w5_questionnaire', 'w5_match', 'w5_edlstm_schcd',\n",
+       "       'w5_edlstm_prov', 'w5_edlstm_quin', 'w5_edlstm_phase',\n",
+       "       'w5_edlstm_nofee', 'w5_edlstm_exdept', 'w5_ed14m_schcd',\n",
+       "       'w5_ed14m_prov', 'w5_ed14m_quin', 'w5_ed14m_phase', 'w5_ed14m_nofee',\n",
+       "       'w5_ed14m_exdept', 'w5_ed15m_schcd', 'w5_ed15m_prov', 'w5_ed15m_quin',\n",
+       "       'w5_ed15m_phase', 'w5_ed15m_nofee', 'w5_ed15m_exdept', 'w5_ed16m_schcd',\n",
+       "       'w5_ed16m_prov', 'w5_ed16m_quin', 'w5_ed16m_phase', 'w5_ed16m_nofee',\n",
+       "       'w5_ed16m_exdept', 'w5_ed17m_schcd', 'w5_ed17m_prov', 'w5_ed17m_quin',\n",
+       "       'w5_ed17m_phase', 'w5_ed17m_nofee', 'w5_ed17m_exdept',\n",
+       "       'w5_poldistr_id_15', 'w5_poldistr_distance_cat_15', 'w5_polnear_id_15',\n",
+       "       'w5_polnear_distance_cat_15'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "df = pd.read_stata('DataBase.dta')\n",
+    "#df['w5_a_dob_d']\n",
+    "df.columns\n",
+    "#df.head()\n"
+   ]
+  },
+  {
+   "source": [
+    "The contents are as of right now unreadable, as they were saved in a manner that is explained in a supplemetary pdf file. The file has described the variables as follows.\n",
+    "- This = This\n",
+    "- That = That\n",
+    "\n",
+    "The above variables describe the person interviewed, how they were questioned, their location, highest form of education, and a set of distances."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -143,9 +123,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python38164bitde33bec5b5ef44afb894064af169029e",
+   "display_name": "Python 3.8.1 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -158,6 +137,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.1"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "7f4ebe321cc81dfe110c012ed4a50973462ef3410903d4968d527b6cf6ecce02"
+   }
   }
  },
  "nbformat": 4,
