DEA-Data folder

--- a/DeaCode.ipynb
+++ b/DeaCode.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "exclusive-glance",
+   "id": "advisory-engineering",
    "metadata": {
     "editable": false,
     "nbgrader": {
@@ -37,89 +37,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "indonesian-martin",
+   "execution_count": 4,
+   "id": "ruled-washington",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "      pid  w5_hhid w5_questionnaire                             w5_match  \\\n",
-       "0  640576   500000            Adult                    Matched Last only   \n",
-       "1  636991   500000            Proxy  Unmatched: No School Data collected   \n",
-       "2  405734   500001            Adult                            Unmatched   \n",
-       "3  630858   500002            Child               No Schooling Completed   \n",
-       "4  731651   500002            Adult                    Matched Last only   \n",
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
        "\n",
-       "  w5_edlstm_schcd w5_edlstm_prov w5_edlstm_quin w5_edlstm_phase  \\\n",
-       "0          102905   Eastern Cape              3       Secondary   \n",
-       "1             NaN            NaN            NaN             NaN   \n",
-       "2             NaN            NaN     Don't know             NaN   \n",
-       "3             NaN            NaN            NaN             NaN   \n",
-       "4          105027        Limpopo              1       Secondary   \n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
        "\n",
-       "  w5_edlstm_nofee            w5_edlstm_exdept  ... w5_ed17m_schcd  \\\n",
-       "0      Don't Know                         HOR  ...            NaN   \n",
-       "1             NaN                         NaN  ...            NaN   \n",
-       "2             NaN                         NaN  ...            NaN   \n",
-       "3             NaN                         NaN  ...            NaN   \n",
-       "4              No  Self-governing territories  ...            NaN   \n",
-       "\n",
-       "  w5_ed17m_prov w5_ed17m_quin w5_ed17m_phase w5_ed17m_nofee w5_ed17m_exdept  \\\n",
-       "0           NaN           NaN            NaN            NaN             NaN   \n",
-       "1           NaN           NaN            NaN            NaN             NaN   \n",
-       "2           NaN           NaN            NaN            NaN             NaN   \n",
-       "3           NaN           NaN            NaN            NaN             NaN   \n",
-       "4           NaN           NaN            NaN            NaN             NaN   \n",
-       "\n",
-       "  w5_poldistr_id_15 w5_poldistr_distance_cat_15 w5_polnear_id_15  \\\n",
-       "0          900782.0                  >1 & <=5km         900782.0   \n",
-       "1          900782.0                  >1 & <=5km         900782.0   \n",
-       "2          900587.0                       <=1km         900587.0   \n",
-       "3          900093.0               >10 & <= 20km         901066.0   \n",
-       "4          900093.0               >10 & <= 20km         901066.0   \n",
-       "\n",
-       "  w5_polnear_distance_cat_15  \n",
-       "0                 >1 & <=5km  \n",
-       "1                 >1 & <=5km  \n",
-       "2                      <=1km  \n",
-       "3              >10 & <= 20km  \n",
-       "4              >10 & <= 20km  \n",
-       "\n",
-       "[5 rows x 38 columns]"
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>w5_a_outcome</th>\n",
+       "      <th>w5_hhid</th>\n",
+       "      <th>pid</th>\n",
+       "      <th>w5_a_intrv_d</th>\n",
+       "      <th>w5_a_intrv_m</th>\n",
+       "      <th>w5_a_intrv_y</th>\n",
+       "      <th>w5_a_refexpl</th>\n",
+       "      <th>w5_a_refexpl_o</th>\n",
+       "      <th>w5_a_refint</th>\n",
+       "      <th>w5_a_refgen</th>\n",
+       "      <th>...</th>\n",
+       "      <th>w5_a_intlng10</th>\n",
+       "      <th>w5_a_intlng11</th>\n",
+       "      <th>w5_a_intlng_o</th>\n",
+       "      <th>w5_a_intresp</th>\n",
+       "      <th>w5_a_intrespact</th>\n",
+       "      <th>w5_a_intresphear</th>\n",
+       "      <th>w5_a_intrespque</th>\n",
+       "      <th>w5_a_intresppid1</th>\n",
+       "      <th>w5_a_intresppid2</th>\n",
+       "      <th>w5_a_intresppid3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Successfully Interviewed</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>640576</td>\n",
+       "      <td>3rd</td>\n",
+       "      <td>October</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>Friendly</td>\n",
+       "      <td>Very attentive</td>\n",
+       "      <td>No other person within hearing range at any time</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Successfully Interviewed</td>\n",
+       "      <td>500001</td>\n",
+       "      <td>405734</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>Neither hostile nor friendly</td>\n",
+       "      <td>Somewhat attentive</td>\n",
+       "      <td>No other person within hearing range at any time</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Successfully Interviewed</td>\n",
+       "      <td>500002</td>\n",
+       "      <td>305961</td>\n",
+       "      <td>15th</td>\n",
+       "      <td>August</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>Friendly</td>\n",
+       "      <td>Very attentive</td>\n",
+       "      <td>No other person within hearing range at any time</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Successfully Interviewed</td>\n",
+       "      <td>500002</td>\n",
+       "      <td>731651</td>\n",
+       "      <td>15th</td>\n",
+       "      <td>August</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>Friendly</td>\n",
+       "      <td>Very attentive</td>\n",
+       "      <td>No other person within hearing range at any time</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Successfully Interviewed</td>\n",
+       "      <td>500003</td>\n",
+       "      <td>303668</td>\n",
+       "      <td>14th</td>\n",
+       "      <td>March</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>Friendly</td>\n",
+       "      <td>Very attentive</td>\n",
+       "      <td>No other person within hearing range at any time</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 1144 columns</p>\n",
+       "</div>"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pid</th>\n      <th>w5_hhid</th>\n      <th>w5_questionnaire</th>\n      <th>w5_match</th>\n      <th>w5_edlstm_schcd</th>\n      <th>w5_edlstm_prov</th>\n      <th>w5_edlstm_quin</th>\n      <th>w5_edlstm_phase</th>\n      <th>w5_edlstm_nofee</th>\n      <th>w5_edlstm_exdept</th>\n      <th>...</th>\n      <th>w5_ed17m_schcd</th>\n      <th>w5_ed17m_prov</th>\n      <th>w5_ed17m_quin</th>\n      <th>w5_ed17m_phase</th>\n      <th>w5_ed17m_nofee</th>\n      <th>w5_ed17m_exdept</th>\n      <th>w5_poldistr_id_15</th>\n      <th>w5_poldistr_distance_cat_15</th>\n      <th>w5_polnear_id_15</th>\n      <th>w5_polnear_distance_cat_15</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>640576</td>\n      <td>500000</td>\n      <td>Adult</td>\n      <td>Matched Last only</td>\n      <td>102905</td>\n      <td>Eastern Cape</td>\n      <td>3</td>\n      <td>Secondary</td>\n      <td>Don't Know</td>\n      <td>HOR</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>900782.0</td>\n      <td>&gt;1 &amp; &lt;=5km</td>\n      <td>900782.0</td>\n      <td>&gt;1 &amp; &lt;=5km</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>636991</td>\n      <td>500000</td>\n      <td>Proxy</td>\n      <td>Unmatched: No School Data collected</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>900782.0</td>\n      <td>&gt;1 &amp; &lt;=5km</td>\n      <td>900782.0</td>\n      <td>&gt;1 &amp; &lt;=5km</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>405734</td>\n      <td>500001</td>\n      <td>Adult</td>\n      <td>Unmatched</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Don't know</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>900587.0</td>\n      <td>&lt;=1km</td>\n      <td>900587.0</td>\n      <td>&lt;=1km</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>630858</td>\n      <td>500002</td>\n      <td>Child</td>\n      <td>No Schooling Completed</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>900093.0</td>\n      <td>&gt;10 &amp; &lt;= 20km</td>\n      <td>901066.0</td>\n      <td>&gt;10 &amp; &lt;= 20km</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>731651</td>\n      <td>500002</td>\n      <td>Adult</td>\n      <td>Matched Last only</td>\n      <td>105027</td>\n      <td>Limpopo</td>\n      <td>1</td>\n      <td>Secondary</td>\n      <td>No</td>\n      <td>Self-governing territories</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>900093.0</td>\n      <td>&gt;10 &amp; &lt;= 20km</td>\n      <td>901066.0</td>\n      <td>&gt;10 &amp; &lt;= 20km</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 38 columns</p>\n</div>"
+      "text/plain": [
+       "               w5_a_outcome  w5_hhid     pid w5_a_intrv_d w5_a_intrv_m  \\\n",
+       "0  Successfully Interviewed   500000  640576          3rd      October   \n",
+       "1  Successfully Interviewed   500001  405734          2nd         June   \n",
+       "2  Successfully Interviewed   500002  305961         15th       August   \n",
+       "3  Successfully Interviewed   500002  731651         15th       August   \n",
+       "4  Successfully Interviewed   500003  303668         14th        March   \n",
+       "\n",
+       "  w5_a_intrv_y w5_a_refexpl w5_a_refexpl_o w5_a_refint w5_a_refgen  ...  \\\n",
+       "0       2017.0          NaN                        NaN         NaN  ...   \n",
+       "1       2017.0          NaN                        NaN         NaN  ...   \n",
+       "2       2017.0          NaN                        NaN         NaN  ...   \n",
+       "3       2017.0          NaN                        NaN         NaN  ...   \n",
+       "4       2017.0          NaN                        NaN         NaN  ...   \n",
+       "\n",
+       "  w5_a_intlng10 w5_a_intlng11 w5_a_intlng_o                  w5_a_intresp  \\\n",
+       "0           NaN           NaN                                    Friendly   \n",
+       "1           NaN           NaN                Neither hostile nor friendly   \n",
+       "2           NaN           NaN                                    Friendly   \n",
+       "3           NaN           NaN                                    Friendly   \n",
+       "4           NaN           NaN                                    Friendly   \n",
+       "\n",
+       "      w5_a_intrespact                                  w5_a_intresphear  \\\n",
+       "0      Very attentive  No other person within hearing range at any time   \n",
+       "1  Somewhat attentive  No other person within hearing range at any time   \n",
+       "2      Very attentive  No other person within hearing range at any time   \n",
+       "3      Very attentive  No other person within hearing range at any time   \n",
+       "4      Very attentive  No other person within hearing range at any time   \n",
+       "\n",
+       "  w5_a_intrespque w5_a_intresppid1 w5_a_intresppid2 w5_a_intresppid3  \n",
+       "0              No              NaN              NaN              NaN  \n",
+       "1              No              NaN              NaN              NaN  \n",
+       "2              No              NaN              NaN              NaN  \n",
+       "3              No              NaN              NaN              NaN  \n",
+       "4              No              NaN              NaN              NaN  \n",
+       "\n",
+       "[5 rows x 1144 columns]"
+      ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_stata('DataBase.dta')\n",
+    "df = pd.read_stata('DEA-Data/adult_dataset.dta')\n",
     "#df['w5_a_dob_d']\n",
     "df.columns\n",
     "df.head()\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "another-round",
+   "metadata": {},
    "source": [
     "# 0. ...A Catchy Title... (e.g. \"Are people getting poorer?\")"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "tamil-antigua",
+   "metadata": {},
    "source": [
     "## Executive Summary\n",
     "The purpose of the notebook is to analyse census and income data to determine if there is a correlation betweeen how much people earn today with regards to their buying power <this is only for now, pleas refine when we know more>\n",
     "What is being modelled are the regression charts of earning amounts of the decade, graduation rates over the decade, as well as GDP and economic expenditure for citizens. Analysing all these simulataneously we have determined <please add in findings here>\n",
     "Limitations have included, time, database availability, <add more with regards to data normalisation and standardization>"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "south-sperm",
+   "metadata": {},
    "source": [
     "## Introduction\n",
     "\n",
@@ -127,18 +292,17 @@
     "Questions include: Is there a significant relationship between education and income level?\n",
     "Methodology: We will take the data, Normalise the data to the 3rd normal form, we will then graph a set regression models that indicate the change over the years with regards to both eduation and income levels. We will then use the insights gained from this to formulate a response.\n",
     "Section Contents Overview: the following will be a description of the original datasets, the changes perfromed on these datasets, and initial visualisations on data correlations."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "speaking-agent",
+   "metadata": {},
    "source": [
     "## Data Wrangling\n",
     "The data was originaly sourced from the [UCT NIDS databse] (http://www.nids.uct.ac.za/nids-data/program-library/derived-files) \n",
     "The date downloaded will be gotten from (Rutendo,pls ask)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
@@ -157,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
