--- a/DAE_data.ipynb
+++ b/DAE_data.ipynb
@@ -7,13 +7,13 @@
     " # Is there a significant relationship between education and income level?\n",
     " \n",
     "## Executive Summary\n",
-    "The purpose of the notebook is to analyse census and income data from to determine if there is a correlation between **how much people earn** and their **highest education level**(i.e primary,secondary or tertiary education) What is being modelled are the regression charts of earning amounts of the decade, graduation rates over the decade, as well as GDP and economic expenditure for citizens.Thus far,we have determined that:\n",
+    "The purpose of the notebook is to analyse census and income data from [UCT NIDS databse](http://www.nids.uct.ac.za/nids-data/program-library/derived-files) to determine if there is a correlation between **how much people earn** and their **highest education level**(i.e primary,secondary or tertiary education) What is being modelled are the regression charts of earning amounts of the decade, graduation rates over the decade, as well as GDP and economic expenditure for citizens.Thus far,we have determined that:\n",
     "\n",
     "  1)The Largest group of participants were young (in their 20s).\n",
     "  \n",
     "  2)The majority was African/Black.\n",
     "  \n",
-    "  3)Few completed tertiary.\n",
+    "  3)Few participants completed tertiary education.\n",
     "  \n",
     "  4)Most people are in the R6 001 to R8 000 income bracket.\n",
     "  \n",
