--- a/DAE_data.ipynb
+++ b/DAE_data.ipynb
@@ -15,7 +15,7 @@
     "  \n",
     "  3)Few participants completed tertiary education.\n",
     "  \n",
-    "  4)Most people are in the R6 001 to R8 000 income bracket.\n",
+    "  4)Most people were in the R6 001 to R8 000 income bracket.\n",
     "  \n",
     "*The journey to coming to this stage had its perils. Some of those being:*\n",
     "\n",
