--- a/DeaCode.ipynb
+++ b/DeaCode.ipynb
@@ -38,29 +38,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 0. ...A Catchy Title... (e.g. \"Are people getting poorer?\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Is there a significant relationship between education and income level?\n",
+    " \n",
     "## Executive Summary\n",
-    "The purpose of the notebook is to analyse census and income data to determine if there is a correlation betweeen how much people earn today with regards to their buying power <this is only for now, pleas refine when we know more>\n",
-    "What is being modelled are the regression charts of earning amounts of the decade, graduation rates over the decade, as well as GDP and economic expenditure for citizens. Analysing all these simulataneously we have determined <please add in findings here>\n",
-    "Limitations have included, time, database availability, <add more with regards to data normalisation and standardization>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Introduction\n",
+    "The purpose of the notebook is to analyse census and income data from [UCT NIDS databse](http://www.nids.uct.ac.za/nids-data/program-library/derived-files) to determine if there is a correlation between **how much people earn** and their **highest education level**(i.e primary,secondary or tertiary education) What is being modelled are the regression charts of earning amounts of the decade, graduation rates over the decade, as well as GDP and economic expenditure for citizens.Thus far,we have determined that:\n",
     "\n",
-    "problem context: the landscape of SA today, with gross inequality and a widening financial gap we aim to see if people of SA, specifically the previously disadavantaged, have amassed more financial power as a result of greater access to education and employment opportunities. We are motivated by finding (a motiovation...)\n",
-    "Questions include: Is there a significant relationship between education and income level?\n",
-    "Methodology: We will take the data, Normalise the data to the 3rd normal form, we will then graph a set regression models that indicate the change over the years with regards to both eduation and income levels. We will then use the insights gained from this to formulate a response.\n",
-    "Section Contents Overview: the following will be a description of the original datasets, the changes perfromed on these datasets, and initial visualisations on data correlations."
+    "  1)The largest group of participants were young (in their 20s).\n",
+    "  \n",
+    "  2)The majority was African/Black.\n",
+    "  \n",
+    "  3)Few participants completed tertiary education.\n",
+    "  \n",
+    "  4)Most people were in the R6 001 to R8 000 income bracket.\n",
+    "  \n",
+    "*The journey to coming to this stage had its perils. Some of those being:*\n",
+    "\n",
+    "  1)Formulating a pertinent question.\n",
+    "  \n",
+    "  2)Finding an extensive dataset in the South African context.\n",
+    "  \n",
+    "  3)Dealing with and sorting out opaque variable names.\n",
+    "\n",
+    "## Introduction\n",
+    "**Problem Context**: South Africa is known to be one of the most unequal societies in the world, with the World Bank reporting that 20% of people in South Africa control almost 70% of the resources.**Motivation**:The financial gap is widening and we aim to see if people of SA, specifically the previously disadavantaged, have amassed more financial power as a result of greater access to education and employment opportunities.**Questions include**: Is there a significant relationship between education and income level?How has this changed over time? What are the provincial differences?Are there any anomalies and if so, how do they affect the analysis.**Methodology**: We will take the data, Normalise the data to the 3rd normal form, we will then graph a set regression models that indicate the change over the years with regards to both eduation and income levels. We will then use the insights gained from this to formulate a response. **Section Contents Overview**: the following will be a description of the original datasets, the changes perfromed on these datasets, and initial visualisations on data correlations."
    ]
   },
   {
@@ -68,8 +68,8 @@
    "metadata": {},
    "source": [
     "## Data Wrangling\n",
-    "The data was originaly sourced from the [UCT NIDS databse] (http://www.nids.uct.ac.za/nids-data/program-library/derived-files) \n",
-    "The date downloaded will be gotten from (Rutendo,pls ask)"
+    "The data was originaly sourced from the [UCT NIDS databse](http://www.nids.uct.ac.za/nids-data/program-library/derived-files) \n",
+    "The date downloaded on the 22nd of March."
    ]
   },
   {
@@ -594,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
