--- a/DeaCode.ipynb
+++ b/DeaCode.ipynb
@@ -69,7 +69,7 @@
    "source": [
     "## Data Wrangling\n",
     "The data was originaly sourced from the [UCT NIDS databse](http://www.nids.uct.ac.za/nids-data/program-library/derived-files) \n",
-    "The date downloaded on the 22nd of March."
+    "The dataset was downloaded on the 22nd of March."
    ]
   },
   {
